Error message mistake has been corrected and relocated, Fixed text overflow and changed arrow colours from blue to red.

--- a/public/styles/article.css
+++ b/public/styles/article.css
@@ -39,6 +39,8 @@ article .tweet-card-header  h3 {
 
 article p {
   font-size: 1em; 
+  word-wrap: break-word; 
+  overflow-wrap: break-word;
 }
 
 article footer {
