--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -29,7 +29,7 @@ nav span {
   justify-content: center;
   display: flex;
   font-size: 15px;
-  color: lightblue;
+  color: rgb(241, 4, 24);
   transition: transform 0.3s ease-in-out;
 }
 
