--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -19,6 +19,8 @@
   background-color: #f4f1ec;
   
 }
+  
+
 
 .new-tweet .tweet-input::placeholder{
   color: #545149;  
@@ -40,15 +42,10 @@
 
 .overLimit {
   color: #ff0000; 
+  
 }
 
-#error-messages {
-  color: red; 
-  margin: 10px; 
-  padding: 5px; 
-  border: 1px solid red; 
-  display: none; 
-}
+
 
 .new-tweet-footer{
   margin-top: 20px;
@@ -56,4 +53,24 @@
 
   display: flex;
   justify-content: space-between;
+}
+
+#error-messages {
+  color: red; 
+  margin: 10px; 
+  padding: 5px; 
+  border: 1px solid red; 
+  display: none;
+  animation: slideDown 0.5s ease-in-out forwards;
+  
+}
+
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
